Generate first 2022 deliverables for ch2,3,4

--- a/latex/ch2.tex
+++ b/latex/ch2.tex
@@ -1282,6 +1282,8 @@ A visualization of the multi-domain loss (MDL) and combination loss (CL) for fou
 	\label{fig:xumxlosses}
 \end{figure}
 
+\newpagefill
+
 \subsubsection{Convolutional denoising autoencoder (CDAE)}
 \label{sec:cdae}
 
