--- a/latex/report.tex
+++ b/latex/report.tex
@@ -125,6 +125,7 @@
 \subfile{ch2.tex}
 \newpagefill
 
+%\setcounter{section}{2}
 \subfile{ch3.tex}
 \newpagefill
 
@@ -136,6 +137,7 @@
 
 \section{References}
 \printbibliography[heading=none]
+\newpagefill
 
 \subfile{ch6.tex}
 \newpagefill
