--- a/latex/ch1.tex
+++ b/latex/ch1.tex
@@ -4,6 +4,8 @@
 \section{Introduction}
 \label{sec:intro}
 
+\todo[inline]{redo this}
+
 The study of acoustic signals forms the core of many fields including sonar, seismology, audio, music, and speech. Acoustic signals are functions of time, representing the evolving amplitude of the sound pressure wave \parencite{melbook}. Another way to characterize acoustic signals is by their frequency components, which can be computed from the Fourier Transform \parencite{melbook}.
 
 One downside of the Fourier Transform is that it contains no temporal information; the Fourier Transform represents the frequency components of an acoustic signal by a sum of infinite sinusoids, but it does not describe how these frequencies evolve with time \parencite{gabordiagrams}. Conversely, many important signals such as speech and music contain frequency components that change with time \parencite{gabor1946}. For these signals, joint time-frequency analysis is required.
