--- a/latex/ch4.tex
+++ b/latex/ch4.tex
@@ -4,8 +4,6 @@
 \section{Experiment}
 \label{sec:experiment}
 
-\todo[inline]{ch4 ich feedback: section introductions, and don't mix discussions or conclusions, separate those into ch5. list all hyperparams}
-
 This section contains the results of the experiments described in the previous section \ref{sec:methodology}. Refer to appendix \ref{appendix:computerspec} for the hardware and software specifications of the computer on which the experiments and results in this section were generated from.
 
 \subsection{GPU acceleration benchmarks}
@@ -38,9 +36,6 @@ The benchmark script for the PyTorch implementation of the sliCQT\footnote{\url{
 	 \hline
 \end{tabular}
 \end{table}
-
-\subsubsection{CuPy BSS metrics}
-\label{sec:bssmetricsresults}
 
 In section \ref{sec:fasterbsscupy}, the slowest functions of the BSS metrics library that used CPU-based NumPy and SciPy operations were ported to the GPU-equivalent CuPy functions to speed up their computation.
 
@@ -214,6 +209,8 @@ To maximize result reproducibility, all pretrained models and code were download
 	\caption{Boxplot of UMX, X-UMX, and xumx-sliCQ alongside the oracles}
 	\label{fig:bssboxplot}
 \end{figure}
+
+\newpagefill
 
 \subsubsection{Model size and inference performance comparison}
 \label{sec:inferenceperf}
