--- a/latex/ch4.tex
+++ b/latex/ch4.tex
@@ -6,10 +6,8 @@
 
 This section contains the results of the experiments described in the previous section \ref{sec:methodology}. Refer to appendix \ref{appendix:computerspec} for the hardware and software specifications of the computer on which the experiments and results in this section were generated from.
 
-\subsection{GPU acceleration benchmarks}
-\label{sec:gpuexperiments}
-
-This section contains the results of the two GPU ports, the PyTorch sliCQT and CuPy BSS metrics, described respectively in sections \ref{sec:torchslicq} and \ref{sec:fasterbsscupy}.
+\subsection{PyTorch port of the sliCQT}
+\label{sec:gpuexperimentpytorch}
 
 In section \ref{sec:torchslicq}, it was described how the CPU-based NumPy implementation of the reference sliCQT Python library was ported to PyTorch to enable its computation on the GPU for use in deep neural networks.
 
@@ -37,6 +35,9 @@ The benchmark script for the PyTorch implementation of the sliCQT\footnote{\url{
 \end{tabular}
 \end{table}
 
+\subsection{CuPy port of BSS metrics}
+\label{sec:gpuexperimentpytorch}
+
 In section \ref{sec:fasterbsscupy}, the slowest functions of the BSS metrics library that used CPU-based NumPy and SciPy operations were ported to the GPU-equivalent CuPy functions to speed up their computation.
 
 The benchmark script for the CuPy BSS metrics library\footnote{\url{https://github.com/sevagh/sigsep-mus-eval}, \url{https://gitlab.com/sevagh/xumx_slicq_extra/-/blob/main/mss_evaluation/mss-oracle-experiments/oracle_eval/benchmark_cupy_eval.py}} creates a random estimated waveform for the four targets of the 14 validation tracks of MUSDB18-HQ, and computes the BSS metrics. The computation time was repeated for 10 iterations and averaged. Three copies of the benchmark script were run; one with the argument \Verb#--disable-cupy# to use the CPU code with SciPy and NumPy functions on a Ryzen 5950X with 64GB RAM, one with the argument \Verb#--cuda-device=0# to use the NVIDIA 3080 Ti GPU, and one with the argument \Verb#--cuda-device=1# to use the NVIDIA RTX 2070 Super GPU.
@@ -50,7 +51,7 @@ In section \ref{sec:slicqparamsrch}, a random grid search was described to choos
 
 The parameter search script\footnote{\url{https://github.com/sevagh/xumx-sliCQ/blob/v2021/scripts/slicq_explore.py}, \url{https://github.com/sevagh/xumx-sliCQ/blob/v2021/docs/slicq_params.md}} computes the median SDR score of the MPI oracle across all four targets and the 14 validation tracks of MUSDB18-HQ. The script ran for 60 iterations using random combinations of sliCQT parameters chosen from the ranges in Table \ref{table:slicqparams} in section \ref{sec:slicqparamsrch}.
 
-The best-performing sliCQT parameters chosen by the script used the following parameters: Bark scale, 262 bins, 32.9--22,050 Hz. These parameters were used in the final neural network, xumx-sliCQ.
+The best-performing sliCQT parameters chosen by the script used the following parameters: Bark scale, 262 bins, 32.9--22,050 Hz. These parameters were used in the final neural network, xumx-sliCQ. Figure \ref{fig:bipolarslicqs} shows a visual comparison of the magnitude spectrograms of the best-performing sliCQT parameters alongside the STFT with the UMX default window size of 4,096 samples.
 
 \begin{figure}[ht]
 	\centering
@@ -60,12 +61,12 @@ The best-performing sliCQT parameters chosen by the script used the following pa
 	\label{fig:bipolarslicqs}
 \end{figure}
 
-The full oracle evaluation on these sliCQT parameters are shown in the boxplot in Figure \ref{fig:oraclebssboxplot}, alongside different STFT window sizes. The performance of both the MPI (mix-phase inversion) and the IRM1 (soft magnitude mask) oracles are shown. The MPI oracle was described in section \ref{sec:noisyphaseoracle}, and the IRM1 oracle was described in section \ref{sec:masksandoracles}. These oracles represent both possible configurations of UMX, which can use either the mix-phase or ratio mask to compute the final waveform.
+The full MPI oracle evaluation of these sliCQT parameters are shown in the boxplot in Figure \ref{fig:oraclebssboxplot}, alongside different STFT window sizes. The MPI oracle was described in section \ref{sec:noisyphaseoracle} as the strategy used by UMX to use the phase of the mix and estimated magnitude of the source to compute the final estimated source waveform.
 
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=\textwidth]{./images-bss/oracle_boxplot.pdf}
-	\caption{Boxplot for oracle mask evaluations}
+	\caption{Boxplot for MPI oracle mask evaluations}
 	\label{fig:oraclebssboxplot}
 \end{figure}
 
